<resources>
    <string name="app_name">marasel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_order_ready">طلبك جاهز الان</string>
    <string name="lorem_insum_is_simply_dummy_text_of_the_nprinting_and_typesetting">Lorem insum is simply dummy text of the\nprinting and typesetting</string>
    <string name="skip">تخطى</string>
    <string name="next">التالى</string>
    <string name="mareseel">مراسيل</string>
    <string name="mrasil">MRASIL</string>
    <string name="regist">Registration</string>
    <string name="regist_u"><u>Register  Account</u></string>
    <string name="user_or_client">Register  As Client Or Delivery Man</string>
    <string name="regisr_seller">تسجيل كتاجر</string>
    <string name="loading_c">Loading...</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or Login With</string>
    <string name="phone">Phone</string>
    <string name="logged_in_successfully">Logged In Successfully...</string>
    <string name="user_val">Username is too short!</string>
    <string name="delivery_time_val">Username is too short!</string>
    <string name="password_val">Password is too short!</string>
    <string name="password_d_match">Password didnt match!</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="phone_val">Phone is too short!</string>
    <string name="search_here_any_place">Search here any place</string>
    <string name="nearest_stores">Nearest Stores</string>
    <string name="menu">Menu</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="egp">EGP</string>
    <string name="quantityCantBeLess">Quantity Cant Be Less Than One</string>
    <string name="basket">Basket</string>
    <string name="new_order">New Order</string>
    <string name="total_price">Total Price</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="complete_order_now">Complete Order Now</string>
    <string name="delivery_place_and_time">Delivery Place And Time</string>
    <string name="delivered_to">Delivered To</string>
    <string name="please_choose_delivery_place">Please Choose Delivery Place</string>
    <string name="choose_delivery_time">Choose Delivery Time</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="no_home_flat">Home number - flat</string>
    <string name="confirm_delivery_place">Confirm Delivery Place</string>
    <string name="enter_flat">Please Insert Flat Number</string>
    <string name="enter_address">Please Insert Address</string>
    <string name="enter_time">Please Insert Delivery Time</string>
    <string name="your_order_is_processing_n_wait_for_offers_from_stars">Your Order Is Processing... \n Wait For Offers From Stars</string>
    <string name="my_order">My Orders</string>
    <string name="order_processing_n_wait_for_offers_from_stars">Order Processing... \n Wait for Offers from Stars</string>
    <string name="a_waiting_offer">Awaiting Offers</string>
    <string name="has_offers">Has Offers</string>
    <string name="connecting">Connecting</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_details">Order Details</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="activate_business_mode_as_n_a_delivery_personand_make_profits">Activate business mode as\n a delivery personand make profits</string>
    <string name="apply_to_work_as_a_delivery_man">Apply to work as a delivery man</string>
    <string name="full_name">Full Name</string>
    <string name="id_copy">ID copy</string>
    <string name="a_copy_of_the_license">A copy of the license</string>
    <string name="a_vehicle_image_from_the_front">A vehicle image from the front</string>
    <string name="a_photo_of_the_vehicle_from_the_back">A photo of the vehicle from the back</string>
    <string name="bank_type">Bank type</string>
    <string name="bank_number">Bank account number</string>
    <string name="apply_request_now">Apply Request Now</string>
    <string name="img_uploaded">Image Uploaded</string>
    <string name="driver_name">Please Enter Your Name</string>
    <string name="driver_id">Please Enter Your Id</string>
    <string name="driver_license">Please Enter Your copy of the license</string>
    <string name="driver_front">Please Enter Your vehicle image from the front</string>
    <string name="driver_back">Please Enter Your photo of the vehicle from the back</string>
    <string name="driver_bank_type">Please Enter Your Bank type</string>
    <string name="driver_bank_number">Please Enter Your Bank account number</string>
    <string name="your_request_has_been_successfully_submitted_your_request_is_being_reviewed_and_we_will_contact_you_shortly">Your request has been successfully submitted. Your request is being reviewed and we will contact you shortly</string>
    <string name="ok">OK</string>
    <string name="the_mode_of_work_has_been_activated_as_a_delivery_person_safety_accompanies_you">The mode of work has been activated as a delivery person ,, safety accompanies you</string>
    <string name="the_balance_of_receivables">The balance of receivables :</string>
    <string name="delivery_person_name">Delivery Person Name</string>
    <string name="notifcation_tones">Notifcation Tones</string>
    <string name="share_your_location">Share Your Location</string>
    <string name="zero_balance">0 EGP</string>
    <string name="ready_requests_for_presentation_and_delivery">Ready requests for presentation and delivery</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="add_offer">Add Offer</string>
    <string name="delivery_price">Delivery Price</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="write_your_notes">Write Your Notes</string>
    <string name="hour">Hour</string>
    <string name="order_number">Order Number</string>
    <string name="pls_insert_delivery_price">Please Insert Delivery Price!</string>
    <string name="pls_insert_delivery_time">Please Insert Delivery Time!</string>
    <string name="pls_insert_note">Please Insert Your Notes!</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="confirm">Confirm</string>
    <string name="insert_code">Please inset four digit!</string>
    <string name="about_app">About App</string>
    <string name="app_version">App Version 1.0</string>
    <string name="how_to_work_in_marasel">How To Work In Marasel</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_item">Delete Item</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this entry?</string>
    <string name="no_data">No Data</string>
    <string name="price_key">Price:</string>
    <string name="time_key">Time:</string>
    <string name="accept">Accept</string>
    <string name="dear_customer_we_would_like_to_know_the_reason_for_canceling_your_order_in_order_to_work_on_solving_your_problem">Dear Customer, We would like to know the reason for canceling your order in order to work on solving your problem</string>
    <string name="there_is_no_delivery_person">There is no delivery person</string>
    <string name="send">Send</string>
    <string name="i_don_t_need_this_order">I don\'t need this order</string>
    <string name="delivery_price_is_very_expensive">Delivery price is very expensive</string>
    <string name="another_reason_you_need_to_tell_about_it">Another reason you need to tell us</string>
    <string name="pls_insert_cancel_reason">Please Insert Cancel Reason</string>
    <string name="profile">Profile</string>
    <string name="notifcations">Notifcations</string>
    <string name="requests">Requests</string>
    <string name="stores">Stores</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="settings">Settings</string>
    <string name="personal_information_settings">Personal Information Settings</string>
    <string name="my_offers">My Offers</string>
    <string name="home">Home</string>
    <string name="balance">Balance:</string>
    <string name="number_of_orders">Number Of Orders</string>
    <string name="orders">Orders</string>
    <string name="ratings">Ratings</string>
    <string name="discount_coupons">Discount Coupons</string>
    <string name="help">Help</string>
    <string name="about_appliication">About Application</string>
    <string name="how_do_i_work_with_mrasil">How Do I Work With Mrasil</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="logout">Logout</string>
    <string name="add_new_coupon"><u>Add New Coupon</u></string>
    <string name="follow_us_on_social_media_for_more_n_discount_coupons">Follow us on Social Media for more \n Discount Coupons</string>
    <string name="add_new_coupon_code">Add New Coupon Code</string>
    <string name="write_coupon_code">Write Coupon Code</string>
    <string name="check_the_coupon">Check The Coupon</string>
    <string name="insert_coupon">Please Insert Coupon Code</string>
    <string name="profile_account_settings">Profile Account Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="language">Language</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>
    <string name="other_search_result">Other Search Result</string>
    <string name="rate_delivery_man">Rate Delivery Man</string>
    <string name="rate">Rate</string>
    <string name="you_must_rate">You Must Rate First</string>
    <string name="write_your_comment">Write Your Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>
    <string name="write_message">Write Message</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="chat">Chat</string>


</resources>
