<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".AuthScreens.ui.ChooseLoginType.ui.ChooseLLoginType">
 <LinearLayout
     android:layout_weight=".4"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/choose_login_bg"
     >
     <ImageView
         android:layout_width="@dimen/_70sdp"
         android:layout_height="@dimen/_70sdp"
         android:src="@drawable/whitelogo"
         android:scaleType="fitXY"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/mareseel"
         android:textSize="@dimen/_35sdp"
         android:textColor="@android:color/white"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/mrasil"
         android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_15sdp"
         android:textColor="@android:color/white"/>

 </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/f_color"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:text="@string/user_or_client"
        android:textSize="@dimen/_16sdp"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/_100sdp"
        android:background="@drawable/f_button_bg"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/regisr_seller"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/f_button_bg">
    </Button>
    </LinearLayout>
</LinearLayout>