<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".AuthScreens.ui.login.ui.login">

        <LinearLayout
            android:layout_weight=".4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/choose_login_bg">

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/whitelogo"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mareseel"
                android:textSize="@dimen/_35sdp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mrasil"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_weight=".6"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="@dimen/_25sdp"
                    android:textColor="@color/f_color" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    app:cardElevation="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:hint="@string/email"
                        android:id="@+id/email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:singleLine="true"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_15sdp"
                        android:drawableLeft="@drawable/email"
                        android:background="@drawable/edittextbg" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    app:cardElevation="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:hint="@string/password"
                        android:id="@+id/password"
                        android:paddingRight="@dimen/_5sdp"
                        android:imeOptions="actionDone"
                        android:drawablePadding="@dimen/_5sdp"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_15sdp"
                        android:drawableLeft="@drawable/password"
                        android:background="@drawable/edittextbg" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/s_button_bg"
                    android:layout_margin="@dimen/_15sdp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_19sdp"
                    android:id="@+id/login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_u"
                    android:id="@+id/regist"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>