<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen.ui.ChangeLanguage.UI.ChangeLanguage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/splash"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".07"
            android:text="@string/settings"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"
            android:text="Language Settings"
            android:gravity="center"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:paddingLeft="@dimen/_30sdp"
            android:paddingRight="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/s_button_bg"
            android:text="@string/arabic"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:drawableLeft="@drawable/saudi_arabia"/>

        <Button
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:paddingLeft="@dimen/_30sdp"
            android:paddingRight="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/edittext_bg"
            android:text="@string/english"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp"
            android:drawableLeft="@drawable/united_states"/>

    </LinearLayout>

</FrameLayout>